<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidAnsr</string>
    <string name="hello">Hello World, Chat Fragment!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">zAnsr</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

    <string name="action_leave">Leave</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>

    <string name="error_connect">Failed to connect</string>

    <!-- messages -->
    <string name="message_welcome">Welcome to Socket.IO Chat –</string>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>

    <!-- For GCM Demo-->
    <string name="registering_message_ready">InstanceID 토큰 가져오기</string>
    <string name="registering_message_generating">InstanceID 토큰 생성중...</string>
    <string name="registering_message_complete">완료!</string>

    <!-- For SignUpAccountActivity-->
    <string name="hint_pw">비밀번호 (영문, 숫자 조합 6자 이상)</string>
    <string name="hint_pw_confirm">비밀번호 재입력</string>
    <string name="err_msg_pw">비밀번호를 입력해주세요.</string>
    <string name="err_msg_pw_confirm">비밀번호가 일치하지 않습니다.</string>
    <!-- For GCM Chatting-->
    <string name="hint_name">Full Name</string>
    <string name="hint_email">아이디 (이메일 주소: abc@schooler.com)</string>
    <string name="err_msg_name">Enter full name</string>
    <string name="err_msg_email">올바른 이메일 주소를 입력해주세요.</string>
    <string name="title_activity_chat_room_discussion">ChatRoomDiscussionActivity</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_sign_up_account">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_take_photo">TakePhotoActivity</string>
    <string name="title_activity_media_store">MediaStoreActivity</string>
    <string name="title_activity_board_detail">게 시 글</string>
    <string name="board_anonymous_name">익 명</string>
    <string name="title_activity_board_write">BoardWriteActivity</string>
    <string name="title_activity_friends_detail">FriendsDetailActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_Alarm">알 림</string>
    <string name="title_activity_profile_setting">ProfileSettingActivity</string>
    <string name="title_activity_friend_status">FriendStatusActivity</string>

    <!-- Strings related to Settings -->


    <string name="invite_kakao"><u>카카오톡으로 초대하기</u></string>
    <string name="invite_facebook"><u>페이스북으로 초대하기</u></string>
    <string name="invite_sms"><u>문자 초대하기</u></string>
    <string name="status_block_msg"><u>해제하기</u></string>
    <string name="status_send_msg"><u>요청정보 보기</u></string>
    <string name="status_receive_msg"><u>친구정보 보기</u></string>
    <string name="status_default_msg"><u>친구정보 보기</u></string>
    <string name="status_greeting_msg">반가워요~</string>

    <string name="image_home_change_thumb"><u>사진 수정</u></string>
    <string name="chat_search_hint_msg">채팅방 이름(동문 이름), 대화내용 검색</string>
    <string name="title_activity_chat_plus">ChatPlusActivity</string>


    <string name="push_like"> 님이 회원님의 게시글을 좋아합니다.</string>
    <string name="push_reply"> 님이 회원님의 게시글에 댓글을 남겼습니다.</string>
    <string name="push_confirm"> 님이 회원님의 친구 신청을 수락하였습니다.</string>
    <string name="push_receive"> 님의 친구신청이 도착하였습니다.</string>
    <string name="push_notice"> 공지사항이 있습니다.</string>

    <string name="empty_friends_msg">친구가 없습니다. 친구를 맺어 많은 학교사람들과 소통해보세요.</string>
    <string name="empty_chat_msg">대화중인 방이 없습니다.</string>
    <string name="empty_board_msg">게시글이 없습니다. 게시글을 작성하여 학교사람들과 소통해보세요.</string>
    <string name="empty_feed_msg">새소식이 없습니다.</string>
    <string name="empty_status_receive_msg">받은 신청이 없습니다.</string>
    <string name="empty_status_send_msg">보낸 신청이 없습니다.</string>
    <string name="empty_status_block_msg">차단한 친구가 없습니다.</string>
    <string name="empty_my_board_msg">내가 쓴 게시글이 없습니다. 게시글을 작성하여 동문과 소통해보세요.</string>
    <string name="empty_my_reply_msg">내가 쓴 댓글이 없습니다.</string>
    <string name="empty_my_board_like_msg">내가 좋아한 게시글이 없습니다. 학교사람들 게시글에 좋아요를 눌러보세요.</string>
    <string name="empty_my_reply_like_msg">내가 좋아한 댓글이 없습니다.</string>
    <string name="title_activity_friends_list">FriendsListActivity</string>


</resources>