<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="28dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/text_invite_kakao"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_kakao"
            android:background="@drawable/z_btn_white_selector"
            android:textSize="16sp"
            android:textColor="@color/valid_input"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/my_page_gray_color"
        android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="28dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/text_invite_fb"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_facebook"
            android:background="@drawable/z_btn_white_selector"
            android:textSize="16sp"
            android:textColor="@color/valid_input"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/my_page_gray_color"
        android:orientation="horizontal">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="28dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/text_invite_sms"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_sms"
            android:background="@drawable/z_btn_white_selector"
            android:textSize="16sp"
            android:textColor="@color/valid_input"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/my_page_gray_color"
        android:orientation="horizontal">
    </LinearLayout>

</LinearLayout>